<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">RideKeeper 3</string>

	<string-array name="drawer_menu_title_array">
        <item>Vehicles Being Stolen</item>
        <item>My Profile</item>
        <item>My Vehicles</item>
        <item>Settings</item>
    </string-array>
    <string name="account_required">An account is required to use this application.</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_year">Year</string>
    <string name="vehicle_liscense">License</string>
    <string name="vehicle_make_hint">Make</string>
    <string name="vehicle_model_hint">Model</string>
    <string name="vehicle_liscense_hint">License</string>
    <string name="vehicle_year_hint">Year</string>
    
    <string name="button_signup">Sign Up</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_resetpwd">Reset password</string>
    <string name="button_exit">Exit</string>
    
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_button_alert_ok">OK</string>
    <string name="title_button_alert_cancel">Cancel</string>
    <string name="button_change">Change</string>
    <string name="owner_display_name">Name</string>
    <string name="owner_name_hint">Your name here</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_emergency_status">Status</string>
    <string name="user_profile_emergency_status_hint">Status of vehicle</string>
    <string name="user_profile_emergency_contact">Contact</string>
    <string name="user_profile_emergency_contact_hint">Enter phone or email here</string>
    <string name="user_profile_email_hint">Email</string>
    <string name="user_profile_phone">Phone</string>
    <string name="user_profile_phone_hint">Phone</string>
    <string name="user_profile_summary">Names, Email, Class, etc</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_vehicle_photo">Vehicle photo</string>
    <string name="camara_photo_picker_dialog">Take from camera</string>
    <string name="gallery_photo_picker_dialog">Select from gallery</string>
    <string name="photo_picker_tag">photo picker tag</string>
    <string name="photo_picker_title">Select profile image</string>

    <string-array name="photo_picker_items">
        <item>Take picture from camera</item>
        <item>Select from gallery</item>
    </string-array>

    <string name="menu_vehicle_options"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_addvehicle">Add vehicle</string>
    <string name="action_refreshvbslist">Refresh</string>
    
    <string name="signup_status">Creating your account</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>