<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >        
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/profile_vehicle_photo" />
        
        <RelativeLayout
            android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <ImageView
       		android:id="@+id/profile_vehicle_photo"
       		android:layout_width="100dp"
       		android:layout_height="100dp"
       		android:layout_marginLeft="100dp"
	    	android:layout_marginBottom="20dp"
       		
       		android:contentDescription="@string/profile_vehicle_photo"
       		android:orientation="horizontal"
       		android:src="@drawable/motorcycle" >
   		    
   		</ImageView>
        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/owner_display_name" >
        </TextView>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/owner_name_hint"
            android:inputType="textCapWords"
            android:singleLine="true" >

            <requestFocus />
        </TextView>
               
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            
            android:text="@string/user_profile_email" >
        </TextView>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_profile_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_make" >
        </TextView>
        
        <TextView
            android:id="@+id/vehicle_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_make_hint">
        </TextView>
        
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_model" >
        </TextView>
        
        <TextView
            android:id="@+id/vehicle_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_model_hint">
        </TextView>
        	
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_year" >
        </TextView>
        
        <TextView
            android:id="@+id/vehicle_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_year_hint">
        </TextView>
           
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_liscense" >
        </TextView>
        
        <TextView
            android:id="@+id/vehicle_liscense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_liscense_hint">
        </TextView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>