<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >        
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/profile_vehicle_photo" />
        
        <RelativeLayout
            android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <ImageView
       		android:id="@+id/profile_vehicle_photo"
       		android:layout_width="100dp"
       		android:layout_height="100dp"
       		android:layout_marginLeft="100dp"
	    	android:layout_marginBottom="20dp"
       		
       		android:contentDescription="@string/profile_vehicle_photo"
       		android:orientation="horizontal"
       		android:src="@drawable/motorcycle" >
   		    
   		</ImageView>
   		
        <Button
            android:id="@+id/ButtonChange"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
			android:layout_alignParentRight="true"
            android:text="@string/button_change"
			android:background="@drawable/custom_button_brown"
            android:onClick="onChangeClicked">
        </Button>
        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_make" >
        </TextView>
        
        <EditText
            android:id="@+id/vehicle_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_make_hint">
        </EditText>
        
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_model" >
        </TextView>
        
        <EditText
            android:id="@+id/vehicle_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_model_hint">
        </EditText>
        	
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_year" >
        </TextView>
        
        <EditText
            android:id="@+id/vehicle_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_year_hint">
        </EditText>
           
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/vehicle_liscense" >
        </TextView>
        
        <EditText
            android:id="@+id/vehicle_liscense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/vehicle_liscense_hint">
        </EditText>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            
        <Button
            android:id="@+id/ButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
			android:background="@drawable/custom_button_lblue"
            android:onClick="onSaveClicked">
        </Button>
        
        <Button
            android:id="@+id/ButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
			android:background="@drawable/custom_button_red"
            android:onClick="onCancelClicked">
        </Button>
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>