<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >        
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/owner_display_name"
            android:textStyle="bold" >

        </TextView>

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/owner_name_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/user_profile_email"
            android:textStyle="bold" >

        </TextView>
        
        <TextView
            android:id="@+id/user_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:hint="@string/user_profile_email_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    android:layout_marginLeft="10dp"
		    android:text="@string/user_profile_phone"
		    android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/user_profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:hint="@string/user_profile_phone_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>