<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:singleLine="false"
        android:text="Welcome to RideKeeper!"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    	
		<Button
		    android:id="@+id/button_signin"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@drawable/custom_button_green"
		    android:text="@string/button_signin"
		    android:textSize="20dp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/button_signup"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@drawable/custom_button_lblue"
		    android:text="@string/button_signup"
		    android:textSize="20dp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		
		<Button
		    android:id="@+id/button_exit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.3"
		    android:background="@drawable/custom_button_red"
		    android:text="@string/button_exit"
		    android:textSize="20dp" />
		
		<Button
		    android:id="@+id/button_resetpwd"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.7"
		    android:background="@drawable/custom_button_brown"
		    android:text="@string/button_resetpwd"
		    android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:singleLine="false"
        android:text="@string/account_required" />

</LinearLayout>